fix(backend): correct recipe search query handling in RecipeServiceImpl